--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,24 +31,13 @@
             </div>
         </nav>
     </header>
-    <main class="container">
+    <main class="contenedor">
         <div class="row my-3">
             <div class="col">
                 <h1>CrudWorks-JS</h1>
             </div>
         </div>
         <div class="row row-cols-1 row-cols-md-3 g-4" id="contenedor">
-          <!--   <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </main>
     <footer>
@@ -58,7 +46,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    <script src="./App.js"></script>
+    <script src="/App.js"></script>
 </body>
 
 </html>
